# ehr-privacy-framework

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEMO_INSTRUCTIONS.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_VALIDATION.md  LICENSE  Makefile  PROJECT_METHODOLOGY.md  README.md  REPORT.md  STREAMLINING_SUMMARY.md  STRUCTURE.md  analyze_demo_logs.py  logging_config.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_demo.txt  run_demo.sh  streamlit_demo.py  test_complete_framework.py
.cursor/rules/: security.mdc
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tag-on-push.yml
data/: README_DATA.md
data/example_output/: access_control_log.csv  complete_framework_test_results.json  complete_scientific_results.json  comprehensive_summary.json  implementation_recommendations.md  privacy_utility_report.txt  rbac_compliance_report.txt  scientific_results.json
data/processed/: data_processing_summary.txt  mimic_comprehensive_dataset.csv
demo/: HOMOMORPHIC_ENCRYPTION_DEMO_GUIDE.md  README.md  rbac_demo.py
notebooks/: 01_data_exploration_and_anonymization.ipynb
src/: __init__.py  comprehensive_analysis.py  main.py
src/access_control/: __init__.py  rbac.py
src/anonymization/: __init__.py  k_anonymity.py  l_diversity.py  t_closeness.py
src/encryption/: __init__.py  homomorphic_encryption.py
src/privacy/: __init__.py  differential_privacy.py
src/utils/: __init__.py  data_loader.py  debug.py  logging_config.py  raw_data_processor.py
